# the-llm-council

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  IMPLEMENTATION-SPEC.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
commands/: council.md
config/: tool_registry.yaml
docs/: adaptive-protocol.md  index.md
docs/architecture/: capability-augmented-council.md
docs/providers/: 2026-06-09-anthropic-prompt-caching-design.md  2026-06-09-cross-provider-prompt-caching.md  creating-providers.md
docs/quickstart/: direct-apis.md  openrouter.md
docs/releases/: 0.7.18.md
evals/: README.md  runtime-baseline.yaml
examples/: README.md  basic_council.py  custom_subagent.py  direct_apis.py  openrouter_only.py
maintainer-digests/: 2026-06-01.md  2026-06-08.md
skills/council/: SKILL.md
skills/council/subagents/: architect.md  assessor.md  critic.md  drafter.md  implementer.md  planner.md  red-team.md  researcher.md  reviewer.md  router.md  shipper.md  synthesizer.md  test-designer.md
src/llm_council/: __init__.py  council.py  eval_import.py  evaluation.py
src/llm_council/cli/: __init__.py  main.py
src/llm_council/config/: __init__.py  models.py
src/llm_council/engine/: __init__.py  adaptive_protocol.py  capabilities.py  degradation.py  evidence.py  health.py  orchestrator.py  task_classifier.py
src/llm_council/logging/: __init__.py
src/llm_council/protocol/: __init__.py  types.py
src/llm_council/providers/: __init__.py  anthropic.py  base.py  compiler.py  concurrency.py  gemini.py  google.py  openai.py  openrouter.py  registry.py  vertex.py
src/llm_council/providers/cli/: __init__.py  _subprocess.py  claude_code.py  codex.py  gemini.py  gemini_cli.py
src/llm_council/registry/: __init__.py  base_agent.py  tool_registry.py
src/llm_council/schemas/: __init__.py  architect.json  assessor.json  implementer.json  planner.json  red-team.json  researcher.json  reviewer.json  router.json  shipper.json  test-designer.json
src/llm_council/storage/: __init__.py  artifacts.py  summarize.py
src/llm_council/subagents/: __init__.py  architect.yaml  assessor.yaml  critic.yaml  drafter.yaml  implementer.yaml  planner.yaml  red-team.yaml  researcher.yaml  reviewer.yaml  router.yaml  shipper.yaml  synthesizer.yaml  test-designer.yaml
src/llm_council/validation/: __init__.py
tasks/: todo.md
tests/: conftest.py  test_capabilities.py  test_cli.py  test_council.py  test_engine.py  test_eval_import.py  test_evaluation.py  test_evidence.py  test_multi_model.py  test_orchestrator.py  test_provider_concurrency.py  test_providers.py  test_request_compiler.py  test_storage.py  test_subagents.py  test_task_classifier.py  test_version.py
tests/unit/: test_provider_registry.py
